fixed logo size on mobile

--- a/css/maagro-allegro.scss
+++ b/css/maagro-allegro.scss
@@ -156,6 +156,9 @@ box-shadow: none !important;
     .navbar {
         min-height: 3.6rem !important;
     }
+    .navbar-item img {
+        max-height: 2.4rem !important;
+    }
     .hero-title{
         font-size: 2.4em !important;
     }
